methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:29: error: not found: value avace
  avace()
  ^